Added GA pixe. Updated form.

--- a/Website/CSWeb/appsettings.config
+++ b/Website/CSWeb/appsettings.config
@@ -1,5 +1,5 @@
   <appSettings>
-    <add key="client_db"   value="server=CSDBServer101;Integrated Security=SSPI; Database=BettaBasket.com;" />
+    <add key="client_db"   value="server=CSDBServer101;Integrated Security=SSPI; Database=BettaBasket.ca;" />
     <add key="master_db"    value="server=CSDBServer101;Integrated Security=SSPI; Database=CSMaster;" />
     <add key="dependencyResolverTypeName" value="CSBusiness.Resolver.UnityDependencyResolver, CSBusiness" />
     <add key="PassPhrase" value="Pas5pr@se"/>
