--- a/Website/CSWeb/CSWeb.csproj
+++ b/Website/CSWeb/CSWeb.csproj
@@ -180,6 +180,7 @@
     <Content Include="Content\Flash\ctavideo.mp4" />
     <Content Include="Content\Flash\ctavideo_ca.mp4" />
     <Content Include="Content\Flash\homevideo.swf" />
+    <Content Include="Content\Images\2baskets.jpg" />
     <Content Include="Content\Images\add_btn.jpg" />
     <Content Include="Content\Images\admin\add.gif" />
     <Content Include="Content\Images\admin\amexCard.gif" />
@@ -845,12 +846,14 @@
     </Compile>
     <Compile Include="CheckoutExpired.aspx.cs">
       <DependentUpon>CheckoutExpired.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="CheckoutExpired.aspx.designer.cs">
       <DependentUpon>CheckoutExpired.aspx</DependentUpon>
     </Compile>
     <Compile Include="CheckoutSessionExpired.aspx.cs">
       <DependentUpon>CheckoutSessionExpired.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="CheckoutSessionExpired.aspx.designer.cs">
       <DependentUpon>CheckoutSessionExpired.aspx</DependentUpon>
